# va-paste

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
crates/va-paste-server/: Cargo.toml
migrations/: 20260305000000_init.sql
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
tests/: integration_test.rs
